--- a/src/components/Styles/Footer.module.css
+++ b/src/components/Styles/Footer.module.css
@@ -1,67 +1,121 @@
-.footerwrapper{
- position: relative;
- bottom: 0;
+.footerwrapper {
+  position: relative;
+  bottom: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  background-color:#082032;
+  background: linear-gradient(to top, black, #273342);
   color: white;
-
+  overflow: hidden;
 }
-.footer
-{ 
+.footer {
   height: fit-content;
-  width:90%;
+  width: 90%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
 }
-.logodesc{
+.logodesc {
   display: flex;
   flex-direction: column;
-  justify-content: space-between; 
+  justify-content: space-between;
 }
-.desc{
-  padding: 10px;
+.desc {
+  margin-top: 5rem;
+  color: white;
+  font-size: 1rem;
+  margin-bottom: 0;
+  margin-left: 5rem;
 }
-.logo{
-height: 170px;
-width: 170px;
-  margin: 0 auto; 
-  
+.logo {
+  height: 40vh;
+  width: 40vh;
+  margin: 2rem;
+  margin-top: -3vh;
+  margin-bottom: -5vh;
+  z-index: 1;
 }
-.socialmedia{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  
-}
-.socialmediaimg{
-  height: 25px;
-  width: 25px;
-  margin: 10px;   
-  margin-top: 0;
-}
-.links{
+.links {
   text-align: center;
   height: 100%;
   margin: 30px;
 }
-
-.otherlinks{
-  background-color: #082032;
-  text-align: center;
-}
-.ul{
+.ul {
   padding: 0;
-  margin-top: 40px;
+  margin-top: 15vh;
+  list-style: none;
 }
-.contactus{
-  margin-top: 40px;
-  color: white;
+.ul li{
+  margin-top: 1rem;
+  font-size: 1rem;
+  font-weight: 400;
+  cursor: pointer;
 }
-.footerwrapper p{
+.ul li:hover{
+  font-weight: 600;
+}
+.footerwrapper p {
   color: rgb(214, 212, 212);
+}
+.socialmedia {
+  display: flex;
+  gap: 1rem;
+  margin-left: 5rem;
+  z-index: 1;
+  margin-top: 1rem;
+}
+.socialIcon {
+  font-size: 1rem;
+  color: white;
+  padding: 0.5rem;
+  background-color: rgb(211, 51, 20);
+  border-radius: 50%;
+  cursor: pointer;
+}
+.socialIcon:hover{
+  background-color: rgb(249, 79, 45);
+}
+.contact {
+  padding: 0;
+  margin-top: 15vh;
+  z-index: 1;
+  margin-left: 5rem;
+}
+.contact h4{
+  color: white;
+  margin: 0;
+  z-index: 1;
+}
+.contact button {
+  background-color: rgb(211, 51, 20);
+  color: white;
+  font-size: 1rem;
+  padding: 0.7rem 2rem;
+  border: none;
+  border-radius: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s ease-in-out;
+  margin-top: 2rem;
+  z-index: 1;
+  margin-left: 2rem;
+}
+ .contact button:hover{
+  color: white;
+  transform: scale(1.05);
+  background-color: rgb(249, 79, 45);
+ }
+ .gradientCircle {
+  position: absolute;
+  bottom: -15vh;
+  right: 0;
+  z-index: -1;
+  width: 50vh;
+  height: 50vh;
+  border-radius: 50%;
+  background: radial-gradient(
+    ellipse at bottom right,
+    rgb(40, 6, 0) 0%, 
+    rgb(249, 79, 45) 100% 
+  );
 }
