--- a/src/components/Pages/Products.module.css
+++ b/src/components/Pages/Products.module.css
@@ -1,37 +1,73 @@
-.product{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    max-height: 400px;
-    max-width: 600px;
-    margin: 20px;
-    background-color: white;
-    border-radius: 4px;
-    z-index: 1;
-    padding: 20px;
+.product {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  margin: 1rem;
+  width: 100%;
+  max-width: 20vw;
+  background-color: rgba(8, 32, 50);
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease-in-out;
+  max-height: 70vh;
+    &:hover {
+    transform: scale(1.05);
+  }
 }
-.product_rating{
-    display: flex;
+
+.product img {
+  max-width: 100%;
+  height: 20vh;
+  margin-bottom: 2rem;
 }
-.product_price{
-    margin-top: 5px;
+
+.product_info {
+  text-align: center;
 }
-.product > img{
-    max-height: 200px;
-    width: 100%;
-    object-fit: contain;
-    margin-bottom: 15px;
+
+.product_info p {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  color: white;
 }
-.product_info{
-    height: 100px;
-    margin-bottom: 15px;
+
+.product_price {
+  margin-top: 1.5rem;
 }
-.product>button{
-    background-color: #f0c14b;
-    border: 1px solid;
-    border-color: #a88734 #9c7e31 #846a29;
-    border-radius: 5px;
-    cursor: pointer;
+
+.product_price small {
+  font-size: 1rem;
+}
+
+.product_price strong {
+  font-size: 1.2rem;
+}
+
+.product_rating {
+  display: flex;
+}
+
+.product_rating p {
+  margin-right: 0.5rem;
+  color: #ffd700;
+}
+
+button {
+  background-color: rgb(211, 51, 20);
+  color: white;
+  font-size: 1rem;
+  padding: 0.5rem 2rem;
+  border: none;
+  border-radius: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s ease-in-out;
+  margin-top: 1rem;
+  margin-left: 1rem;
+  &:hover {
+    color: white;
+    background-color: rgb(249, 79, 45);
+  }
 }
