--- a/src/components/Styles/Cart.module.css
+++ b/src/components/Styles/Cart.module.css
@@ -1,9 +1,9 @@
 .cartpanel{
     position: fixed;
-    top: 0;
+    top: 9vh;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 91vh;
     display: flex;
     justify-content: flex-end;
     z-index: 99;
@@ -90,8 +90,8 @@
                 cursor: pointer;
                 font-size: 13px;
                 color: white;
-                background: #6516aa;
-                border-bottom: 3px solid #4b0e8c;
+                background: rgb(211, 51, 20);
+                border-bottom: 3px solid rgb(211, 51, 20);
                 
             }
         }
@@ -115,7 +115,7 @@
                 font-size: 20px;
                 font-weight: 700;
                 text-transform: uppercase;
-                    color: #6516aa;
+                    color: rgb(211, 51, 20);
                 
                 }
                 
@@ -142,8 +142,8 @@
     cursor: pointer;
     font-size: 16px;
     color: white;
-    background: #6516aa;
-    border-bottom: 3px solid #4b0e8c;
+    background-color: rgb(211, 51, 20);
+    border-bottom: 3px solid rgb(199, 45, 14);
         }
     }
 }
