--- a/src/components/Styles/Home.module.css
+++ b/src/components/Styles/Home.module.css
@@ -47,8 +47,8 @@ p{
     width: 100%;
     /* mask-image: linear-gradient(to bottom,rgba(0,0,0,1),rgba(0,0,0,0)); */
     margin-bottom: -50px;
-    background-image: url("https://hdn-1.fynd.com/company/327/applications/60744d605bdf7f6a00a86ff9/theme/pictures/free/original/theme-image-1661339632400.png");
-    height: 500px;
+    background-color: black;
+    height: 110vh;
     background-size: cover;
     background-position: center;
     /* background-repeat: no-repeat; */
@@ -59,7 +59,8 @@ p{
 .home_row{
     display: flex;
     z-index: 1;
-    justify-content: center;
+    flex-wrap: wrap; 
+    justify-content: space-evenly;
     width: 100%;
 }
 .fade_bottom{
@@ -69,3 +70,85 @@ p{
     background-size: 100% 250px;
     background-repeat: no-repeat;
 }
+.gradientCircle {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 0;
+    width: 70vh;
+    height: 70vh;
+    border-radius: 50%;
+    background: radial-gradient(
+      ellipse at bottom right,
+      rgb(40, 6, 0) 0%, 
+      rgb(249, 79, 45) 100% 
+    );
+  }
+  .gradientCircle1 {
+    position: absolute;
+    top: -20%;
+    left: -10%;
+    z-index: 0;
+    width: 50vh;
+    height: 50vh;
+    border-radius: 50%;
+    background: radial-gradient(
+      ellipse at bottom right,
+      rgb(40, 6, 0) 0%, 
+      rgb(249, 79, 45) 100% 
+    );
+  }
+  .outsideImage {
+    position: absolute;
+    height: 70vh;
+    right: 25vh; 
+    bottom: 10vh; 
+    z-index: 1; 
+    transform: rotate(10deg); 
+    transition: transform ease-in-out 0.3s;
+  }
+  .outsideImage:hover {
+    transform: rotate(10deg) scale(1.05);
+  }
+  .headingContainer {
+    position: absolute;
+    top: 30vh; 
+    left: 15vh; 
+    z-index: 1; 
+    width: 45%;
+  }
+  .headingContainer p{
+   color: rgb(180, 180, 180);
+   margin-top: 2rem;
+  }
+  .headingContainer button {
+    background-color: rgb(211, 51, 20);
+    color: white;
+    font-size: 1.3rem;
+    padding: 1rem 3rem;
+    border: none;
+    border-radius: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s ease-in-out;
+    margin-top: 2rem;
+    margin-left: 2rem;
+  }
+   .headingContainer button:hover{
+    color: white;
+    transform: scale(1.05);
+    background-color: rgb(249, 79, 45);
+   }
+  .heading {
+    color: white;
+    font-size: 3rem;
+    font-weight: 400;
+  }
+  .backgroundImage {
+    position: absolute;
+    top: 10vh;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
+  }
