--- a/src/components/Styles/Search.module.css
+++ b/src/components/Styles/Search.module.css
@@ -7,11 +7,13 @@
     width: 100%;
     height: 100%;
     z-index: 999;
+    padding-top: 9vh;
     top: 0;
     left: 0;
-    background-color: white;
+    background-color: #273342;
     transform: translateY(100%);
     animation: slideSearchWindow 0.5s ease forwards;
+    color: white;
 }
 
 .form-field {
@@ -27,13 +29,14 @@
     }
 
     input {
+        background-color: #273342;
         width: 100%;
         max-width: 1200px;
         height: 50px;
         text-align: center;
         font-size: 20px;
         font-weight: 600;
-        color: #212121;
+        color: white;
         outline: none;
         border: none;
         text-transform: uppercase;
@@ -44,13 +47,14 @@
         }
 
         &::placeholder {
-            color: #212121;
+            color: rgb(218, 218, 218);
         }
     }
 
     .close-btn {
         position: absolute;
         font-size: 25px;
+        color: white;
         right: 20px;
         top: 50%;
         transform: translateY(-50%);
@@ -66,6 +70,7 @@
 .search-result-content {
     max-width: calc(100% - 20px);
     margin: 0 auto;
+    color: white;
 
     @media (min-width: 768px) {
         max-width: 800px;
