--- a/src/components/Styles/Footer.module.css
+++ b/src/components/Styles/Footer.module.css
@@ -20,6 +20,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  z-index: 1;
 }
 .desc {
   margin-top: 5rem;
@@ -27,6 +28,7 @@
   font-size: 1rem;
   margin-bottom: 0;
   margin-left: 5rem;
+  z-index: 1;
 }
 .logo {
   height: 40vh;
@@ -40,23 +42,28 @@
   text-align: center;
   height: 100%;
   margin: 30px;
+  z-index: 1;
 }
 .ul {
   padding: 0;
   margin-top: 15vh;
   list-style: none;
+  z-index: 1;
 }
 .ul li{
   margin-top: 1rem;
   font-size: 1rem;
   font-weight: 400;
   cursor: pointer;
+  z-index: 1;
 }
 .ul li:hover{
   font-weight: 600;
+  
 }
 .footerwrapper p {
   color: rgb(214, 212, 212);
+  z-index: 1;
 }
 .socialmedia {
   display: flex;
@@ -72,6 +79,7 @@
   background-color: rgb(211, 51, 20);
   border-radius: 50%;
   cursor: pointer;
+  z-index: 1;
 }
 .socialIcon:hover{
   background-color: rgb(249, 79, 45);
