--- a/src/components/Styles/ProductPage.module.css
+++ b/src/components/Styles/ProductPage.module.css
@@ -1,187 +1,141 @@
-/* single-product-main-content.module.css */
-
-/* Import mixins from "mixins.scss" */
-/* Example: @import "../../css-config/mixins.scss"; */
-
 .single-product-main-content {
-    margin: 20px 0;
+  background: linear-gradient(to bottom, black, #273342);
+  height: 80vh;
+  padding-top: 20vh;
+}
+.layout {
+  max-width: calc(100% - 20px);
+  margin: 0 auto;
+  display: flex;
+}
+.single-product-page {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100vw;
+}
 
-    /* Example: @include md { */
-    @media (min-width: 768px) {
-        margin: 75px 0;
-    }
+.left {
+    z-index: 1;
+  display: flex;
+}
 
-    .layout {
-        max-width: calc(100% - 20px);
-        margin: 0 auto;
+.left img {
+  width: 100%;
+  display: block;
+  height: 50vh;
+  width: 30vw;
+  transition: transform ease-in-out 0.3s;
+}
+.left img:hover {
+  transform: scale(1.1);
+}
+.right {
+  display: flex;
+  padding-top: 5rem;
+  flex-direction: column;
+  width: 30vw;
+  z-index: 1;
+}
 
-        /* Example: @include md { */
-        @media (min-width: 768px) {
-            max-width: 1200px;
-        }
-
-        .single-product-page {
-            display: flex;
-            flex-direction: column;
-
-            /* Example: @include md { */
-            @media (min-width: 768px) {
-                flex-direction: row;
-            }
-
-            .left {
-                width: 100%;
-                background-color: rgba(0, 0, 0, 0.05);
-                flex-shrink: 0;
-
-                /* Example: @include md { */
-                @media (min-width: 768px) {
-                    width: 600px;
-                    height: 600px;
-                }
-
-                img {
-                    width: 100%;
-                    display: block;
-                }
-            }
-
-            .right {
-                display: flex;
-                flex-direction: column;
-                padding-top: 20px;
-
-                /* Example: @include md { */
-                @media (min-width: 768px) {
-                    padding: 0 35px;
-                }
-
-                .name {
-                    font-size: 20px;
-                    line-height: 28px;
-                    margin-bottom: 20px;
-
-                    /* Example: @include md { */
-                    @media (min-width: 768px) {
-                        font-size: 24px;
-                        line-height: 32px;
-                    }
-                }
-
-                .price {
-                    font-size: 24px;
-                    line-height: 32px;
-                    margin-bottom: 20px;
-                }
-
-                .desc {
-                    font-size: 14px;
-                    line-height: 20px;
-                    margin-bottom: 20px;
-                    color: #6b6b6b;
-
-                    /* Example: @include md { */
-                    @media (min-width: 768px) {
-                        font-size: 16px;
-                        line-height: 24px;
-                        margin-bottom: 20px;
-                    }
-                }
-
-                .cart-buttons {
-                    display: flex;
-
-                    /* Example: @include md { */
-                    @media (min-width: 768px) {
-                        margin-top: 30px;
-                    }
-
-                    .quantity-buttons {
-                        width: fit-content;
-                        display: flex;
-                        border: 2px solid rgba(0, 0, 0, 0.2);
-                        margin-right: 10px;
-                        height: 50px;
-
-                        span {
-                            font-size: 18px;
-                            width: 40px;
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
-                            cursor: pointer;
-                            color: #6b6b6b;
-
-                            &:nth-child(1) {
-                                border-right: 2px solid rgba(0, 0, 0, 0.2);
-                            }
-
-                            &:nth-child(2) {
-                                width: 60px;
-                            }
-
-                            &:nth-child(3) {
-                                border-left: 2px solid rgba(0, 0, 0, 0.2);
-                            }
-                        }
-                    }
-
-                    .add-to-cart-button {
-                        outline: 0;
-                        border: 0;
-                        height: 50px;
-                        width: 180px;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        cursor: pointer;
-                        font-size: 16px;
-                        color: white;
-                        background: #8e2de2;
-                        border-bottom: 3px solid #6516aa;
-                        flex-grow: 1;
-
-                        /* Example: @include md { */
-                        @media (min-width: 768px) {
-                            flex-grow: unset;
-                        }
-
-                        svg {
-                            margin-right: 10px;
-                        }
-                    }
-                }
-
-                .divider {
-                    margin: 20px 0;
-                    height: 1px;
-                    width: 100%;
-                    background-color: rgba(0, 0, 0, 0.1);
-                }
-
-                .info-item {
-                    .text-bold {
-                        font-size: 18px;
-                        font-weight: 500;
-                        display: block;
-
-                        &:nth-child(1) {
-                            margin-bottom: 20px;
-                        }
-
-                        span {
-                            font-size: 16px;
-                            font-weight: 400;
-                            cursor: pointer;
-                            color: #6b6b6b;
-                        }
-
-                        svg {
-                            margin: 0 5px;
-                        }
-                    }
-                }
-            }
-        }
-    }
+.name {
+  font-size: 3rem;
+  color: white;
+  margin-bottom: 20px;
+}
+.price {
+  font-size: 24px;
+  color: white;
+  margin-bottom: 20px;
+}
+.desc {
+  font-size: 14px;
+  margin-bottom: 20px;
+  color: rgb(192, 192, 192);
+}
+.cart-buttons {
+  display: flex;
+}
+.quantity-buttons {
+  width: fit-content;
+  display: flex;
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  margin-right: 10px;
+  height: 50px;
+}
+.quantity-buttons span {
+  font-size: 18px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  color: #6b6b6b;
+}
+.quantity-buttons span:nth-child(1) {
+  border-right: 2px solid rgba(0, 0, 0, 0.2);
+}
+.quantity-buttons span:nth-child(2) {
+  width: 60px;
+}
+.quantity-buttons span:nth-child(3) {
+  border-left: 2px solid rgba(0, 0, 0, 0.2);
+}
+.add-to-cart-button {
+  background-color: rgb(211, 51, 20);
+  color: white;
+  font-size: 1rem;
+  padding: 0.7rem 2rem;
+  border: none;
+  border-radius: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s ease-in-out;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+.add-to-cart-button svg {
+  margin-right: 0.3rem;
+  vertical-align: baseline;
+}
+.divider {
+  margin: 20px 0;
+  height: 0.1rem;
+  width: 100%;
+  background-color: white;
+}
+.text-bold {
+  font-size: 18px;
+  font-weight: 500;
+  display: block;
+  width: 100%;
+  justify-content: space-evenly;
+  color: white;
+}
+/* .text-bold:nth-child(
+    1
+  ) {
+  margin-bottom: 20px;
+} */
+.text-bold span {
+  font-size: 16px;
+  justify-content: space-evenly;
+  font-weight: 400;
+  cursor: pointer;
+  color: #b9b8b8;
+}
+.text-bold svg {
+  margin: 0 0.8rem;
+}
+.gradientCircle {
+  position: absolute;
+  top: -40vh;
+  right: 10vh;
+  z-index: 0;
+  width: 70vh;
+  height: 70vh;
+  border-radius: 50%;
+  background: radial-gradient(
+    ellipse at bottom right,
+    rgb(40, 6, 0) 0%,
+    rgb(249, 79, 45) 100%
+  );
 }
