--- a/src/components/Styles/SignUp.module.css
+++ b/src/components/Styles/SignUp.module.css
@@ -2,7 +2,7 @@
   height: 100%;
   min-height: 100vh;
   width: 100%;
-  background: linear-gradient(to right, #9900ff, #cc80ff);
+  background: linear-gradient(to bottom, black, #273342);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,8 +37,8 @@
 .footer button {
   outline: none;
   border: none;
-  background-color: #9900ff;
-  color: #fff;
+  background-color: rgb(211, 51, 20);
+  color: white;
   border-radius: 5px;
   font-weight: bold;
   font-size: 1rem;
@@ -53,7 +53,7 @@
 }
 
 .footer button:hover {
-  background-color: #aa2aff;
+  background-color: rgb(249, 79, 45);
 }
 
 .footer p {
@@ -63,8 +63,22 @@
 
 .footer p span a {
   font-weight: bold;
-  color: #9900ff;
+  color: rgb(249, 79, 45);
   letter-spacing: 1px;
   font-size: 1rem;
   text-decoration: none;
+}
+.gradientCircle1 {
+  position: absolute;
+  top: -5%;
+  left: 0%;
+  z-index: 0;
+  width: 50vh;
+  height: 50vh;
+  border-radius: 50%;
+  background: radial-gradient(
+    ellipse at bottom right,
+    rgb(40, 6, 0) 0%, 
+    rgb(249, 79, 45) 100% 
+  );
 }
