--- a/src/components/Styles/CartItem.module.css
+++ b/src/components/Styles/CartItem.module.css
@@ -2,39 +2,54 @@
 
 .cart-products {
     flex-grow: 1;
+   
 }
 
 .cart-product {
     padding: 20px 15px;
     display: flex;
+    transition: background-color 0.3s ease;
+    scroll-behavior: auto;
+}
+
+.cart-product:hover {
+    background-color: rgba(0, 0, 0, 0.05);
 }
 
 .img-container {
     background-color: rgba(0, 0, 0, 0.05);
     width: 60px;
-    height: 60px;
+    height: 100px;
     flex-shrink: 0;
 }
 
 .img-container img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .prod-details {
     overflow: hidden;
     position: relative;
+    
 }
+
 .close-btn {
     position: absolute;
     top: 0;
     right: 0;
     cursor: pointer;
-    margin-bottom: 0.5rem;   
+    margin-bottom: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 .close-btn svg {
-    font-size: 10px;
+    font-size: 14px; /* Adjust the size as needed */
 }
+
 .name {
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -50,8 +65,9 @@
 .text {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 5px;
-    font-size: 12px;
+    font-size: 18px;
     font-weight: 600;
 }
 
@@ -68,6 +84,7 @@
 
 .quantity-buttons {
     width: fit-content;
+    height: auto;
     display: flex;
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding-bottom: 0.5rem;
@@ -81,26 +98,21 @@
     justify-content: center;
     cursor: pointer;
     color: #6b6b6b;
-
 }
-
-.quantity-buttons span:nth-child(1) {
-    font-size: 18px;
-    border-right: 1px solid rgba(0, 0, 0, 0.1);
+.quantity {
+    font-size: 20px;
+}
+.quantity-buttons span:nth-child(1),
+.quantity-buttons span:nth-child(3) {
+    font-size: 16px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .quantity-buttons span:nth-child(2) {
     width: 40px;
 }
 
-.quantity-buttons span:nth-child(3) {
-    font-size: 18px;
-    border-left: 1px solid rgba(0, 0, 0, 0.1);
+.quantity-btn {
+    font-size: 10px;
 }
 
-.cart-product:hover {
-    background-color: rgba(0, 0, 0, 0.05);
-}
-.quantity-btn{
-    font-size: 1rem;
-}
