--- a/src/components/Styles/Cart.module.css
+++ b/src/components/Styles/Cart.module.css
@@ -1,157 +1,147 @@
-.cartpanel{
-    position: fixed;
-    top: 9vh;
-    left: 0;
-    width: 100%;
-    height: 91vh;
-    display: flex;
-    justify-content: flex-end;
-    z-index: 99;
-    .opaclayer{
-        background-color: rgba(0,0,0,0.5);
-        position: absolute;
+.cartpanel {
+  position: fixed;
+  top: 9vh;
+  left: 0;
+  width: 100%;
+  height: 91vh;
+  display: flex;
+  justify-content: flex-end;
+  z-index: 99;
+  .opaclayer {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    }
-    .cartcontent{
-        width: 340px;
-        height: 100%;
-        background-color: white;
-        position: relative;
-        z-index: 1;
-        display:flex;
-        flex-direction: column;
-        transform: translateX(100%);
-        animation: slideCart 0.3s ease-in-out forwards;
-        /* @include md{
+  }
+  .cartcontent {
+    width: 340px;
+    height: 100%;
+    background-color: white;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    transform: translateX(100%);
+    animation: slideCart 0.3s ease-in-out forwards;
+    /* @include md{
             width: 340px;
 
         } */
-        .cartheader{
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-            padding: 20px 15px;
-            border-bottom: 1px solid rgba(0,0,0,0.1);  
-            .heading{
-                flex-grow: 1;
-                margin-bottom: 0;
-                font-size: 20px;
-                font-weight: 700;
-                text-transform: uppercase;
-
-            }
-            .close{
-                display: flex;
-                align-items: center;
-                gap: 5px;
-                cursor: pointer;
-                svg{
-                    font-size: 18px;
-                }
-                
-            }
-            .text{
-                display: flex;
-                align-items: center;
-                gap: 5px;
-                cursor: pointer;
-                svg{
-                    font-size: 18px;
-                }
-                text-transform: uppercase;
-                font-size: 14px;
-                &:hover{
-                    opacity: 0.5;
-                }
-            }
-            
+    .cartheader {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      padding: 20px 15px;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      .heading {
+        flex-grow: 1;
+        margin-bottom: 0;
+        font-size: 20px;
+        font-weight: 700;
+        text-transform: uppercase;
+      }
+      .close {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        cursor: pointer;
+        svg {
+          font-size: 18px;
         }
-        .emptycart{
-            display: flex;
-            flex-direction:column ;
-            align-items: center;
-            gap: 20px;
-            margin-top: 100px;
-            svg{
-                font-size: 120px;
-                opacity: 0.1;
-            }
-            .returncta{
-                outline: 0;
-                border: 0;
-                height: 40px;
-                width: 150px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                cursor: pointer;
-                font-size: 13px;
-                color: white;
-                background: rgb(211, 51, 20);
-                border-bottom: 3px solid rgb(211, 51, 20);
-                
-            }
+      }
+      .text {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        cursor: pointer;
+        svg {
+          font-size: 18px;
         }
-        .cartfooter{
-            border-top: 1px solid rgba(0,0,0,0.1);
-            .subtotal{
-                padding: 20px 15px;
-                border-bottom: 1px solid rgba(0,0,0,0.1);
-                display: flex;
-                justify-content: space-between;
-                .text{
-                    margin-bottom: 0;
-                    font-size: 20px;
-                    font-weight: 700;
-                    text-transform: uppercase;
-                    
-                
-                }
-                .texttotal{
-                    margin-bottom: 0;
-                font-size: 20px;
-                font-weight: 700;
-                text-transform: uppercase;
-                    color: rgb(211, 51, 20);
-                
-                }
-                
-
-            }
+        text-transform: uppercase;
+        font-size: 14px;
+        &:hover {
+          opacity: 0.5;
         }
-        .abutton{
-            padding: 20px 15px;
-            padding: 20px 15px;
-            border-bottom: 1px solid rgba(0,0,0,0.1);
-            display: flex;
-            justify-content: space-between;
-            
-        }
-        .checkoutcta{
-            padding: 20px 15px;
-    
-    border: 0;
-    height: 50px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    font-size: 16px;
-    color: white;
-    background-color: rgb(211, 51, 20);
-    border-bottom: 3px solid rgb(199, 45, 14);
-        }
+      }
     }
+    .emptycart {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      margin-top: 100px;
+      svg {
+        font-size: 120px;
+        opacity: 0.1;
+      }
+      .returncta {
+        outline: 0;
+        border: 0;
+        height: 40px;
+        width: 150px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        font-size: 13px;
+        color: white;
+        background: rgb(211, 51, 20);
+        border-bottom: 3px solid rgb(211, 51, 20);
+      }
+    }
+    .cartfooter {
+      border-top: 1px solid rgba(0, 0, 0, 0.1);
+      .subtotal {
+        padding: 20px 15px;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        display: flex;
+        justify-content: space-between;
+        .text {
+          margin-bottom: 0;
+          font-size: 20px;
+          font-weight: 700;
+          text-transform: uppercase;
+        }
+        .texttotal {
+          margin-bottom: 0;
+          font-size: 20px;
+          font-weight: 700;
+          text-transform: uppercase;
+          color: rgb(211, 51, 20);
+        }
+      }
+    }
+    .abutton {
+      padding: 20px 15px;
+      padding: 20px 15px;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      display: flex;
+      justify-content: space-between;
+    }
+    .checkoutcta {
+      padding: 20px 15px;
+
+      border: 0;
+      height: 50px;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      font-size: 16px;
+      color: white;
+      background-color: rgb(211, 51, 20);
+      border-bottom: 3px solid rgb(199, 45, 14);
+    }
+  }
 }
-@keyframes slideCart{
-    0%{
-        transform: translateX(100%);
-    }
-    100%{
-        transform: translateX(0%);
-    }
+@keyframes slideCart {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
 }
